Fixes: Conclusions, fig MemoryEfficiency, fig: FV visualizations 1st query offset

--- a/myFigureWnorm.tex
+++ b/myFigureWnorm.tex
@@ -5,7 +5,7 @@
 \begin{minipage}{0.34\linewidth}
     \centering
     \vspace{5mm}
-    \includegraphics[height=40mm]{imgs/ex1/query.jpg}
+    \hspace{5mm}\includegraphics[height=40mm]{imgs/ex1/query.jpg}
 \end{minipage}
 % Retrieved images
 \begin{minipage}{0.75\linewidth}
