--- a/tableResults01.tex
+++ b/tableResults01.tex
@@ -9,19 +9,21 @@
 		\rowcolor{maroon!50}
 		recall@K [$\%$] & 1 & 2 & 5 & 10 & 20 \\
 		\hline
-		\rowcolor{maroon!10}
-		BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
-        \rowcolor{maroon!10}
-		BOW p-val     & 33.0  & 40.3  & 50.2 & 58.7   &  66.4 \\
-        \rowcolor{maroon!10}
-		BOW w-norm  & 31.8  & 38.7  & 49.7 & 60.2   & 69.4 \\
-        \hline
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		% \rowcolor{maroon!10}
+		% BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
+  %       \rowcolor{maroon!10}
+		% BOW p-val     & 33.0  & 40.3  & 50.2 & 58.7   &  66.4 \\
+  %       \rowcolor{maroon!10}
+		% BOW w-norm  & 31.8  & 38.7  & 49.7  & 60.2  & 69.4 \\
+  %       \rowcolor{maroon!10}
+  %   BOW raw SVM  & 6.4  & 8.1   & 13.5  & 17.5  & 20.5 \\
+  %       \hline
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
 		FV128         & 33.6  & 41.8  & 52.0 & 59.8   & 67.7  \\
 		\rowcolor{maroon!10}
-		FV128 p-val                 & \textbf{}       & \textbf{}     & \textbf{}     & \textbf{}     & \textbf{}  \\
-    \rowcolor{maroon!10}
+		% FV128 p-val                 & \textbf{}       & \textbf{}     & \textbf{}     & \textbf{}     & \textbf{}  \\
+  %   \rowcolor{maroon!10}
 		\textbf{FV128 w-norm}     & \textbf{38.3}   & \textbf{47.5} & \textbf{57.7} & \textbf{65.8} & \textbf{72.7}  \\
     \hline  
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
