--- a/myFigurePval.tex
+++ b/myFigurePval.tex
@@ -26,31 +26,31 @@
         \end{minipage}
         \vspace{3mm}
         \\
-        %%%%%%%%%%% Example 2 %%%%%%%%%%%%%%%
-        \begin{minipage}{0.34\linewidth}
-            \centering
-            \vspace{0mm}
-            \includegraphics[trim = 45mm 40mm 45mm 30mm, clip=true, height=36mm]{imgs/Pval/exImproved03/query.jpg}
-        \end{minipage}
-        % Retrieved images
-        \begin{minipage}{0.75\linewidth}
-            % FV e-SVM
-            \begin{minipage}{\linewidth} 
-                \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval01.jpg}}
-                \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval02.jpg}}
-                \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval03.jpg}}
-                \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval04.jpg}}
-            \end{minipage}
-            \\
-            \begin{minipage}{\linewidth}
-                \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved01.jpg}}
-                \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved02.jpg}}
-                \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved03.jpg}}
-                \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved04.jpg}}
-            \end{minipage} 
-        \end{minipage}
-        \vspace{3mm}
-        \\
+        % %%%%%%%%%%% Example 2 %%%%%%%%%%%%%%%
+        % \begin{minipage}{0.34\linewidth}
+        %     \centering
+        %     \vspace{0mm}
+        %     \includegraphics[trim = 45mm 40mm 45mm 30mm, clip=true, height=36mm]{imgs/Pval/exImproved03/query.jpg}
+        % \end{minipage}
+        % % Retrieved images
+        % \begin{minipage}{0.75\linewidth}
+        %     % FV e-SVM
+        %     \begin{minipage}{\linewidth} 
+        %         \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval01.jpg}}
+        %         \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval02.jpg}}
+        %         \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval03.jpg}}
+        %         \colorbox{myGreen}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improvedPval04.jpg}}
+        %     \end{minipage}
+        %     \\
+        %     \begin{minipage}{\linewidth}
+        %         \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved01.jpg}}
+        %         \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved02.jpg}}
+        %         \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved03.jpg}}
+        %         \colorbox{myRed}{\includegraphics[trim = 35mm 30mm 35mm 30mm, clip=true, height=16mm]{imgs/Pval/exImproved03/improved04.jpg}}
+        %     \end{minipage} 
+        % \end{minipage}
+        % \vspace{3mm}
+        % \\
         %%%%%%%%%%% Example 3 %%%%%%%%%%%%%%%
         \begin{minipage}{0.34\linewidth}
             \centering
